examples/test/testpolicy1708.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1708
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key30: value35
      key47: value18
      key23: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value25
          key40: value41
      podSelector:
        matchLabels:
          key23: value48
          key7: value10
          key29: value11
